# cumulus-granule-to-cnm

./: CHANGELOG.md  README.rst  build.sh  pyproject.toml
.github/workflows/: build-pipeline.yml  build.yml
cumulus_granule_to_cnm/: __init__.py  cumulus_granule_to_cnm.py
tests/: test_cumulus_granule_to_cnm.py  test_cumulus_publish_cnm.py
