[tool.poetry]
name = "cumulus-granule-to-cnm"
version = "0.1.0"
description = "Basic conversion from granule to cnm"
authors = ["Hong-Kit Randy Yeung <hong-kit.r.yeung@jpl.nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
cumulus-process = "^1.0.0"
podaac-cloud-notification-message-schema = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
moto = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
