[tool.poetry]
name = "cumulus-granule-to-cnm"
version = "0.2.1-alpha.1"
description = "Basic conversion from granule to cnm"
authors = ["Hong-Kit Randy Yeung <hong-kit.r.yeung@jpl.nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
cumulus-process = "^1.2.0"
podaac-cloud-notification-message-schema = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
moto = "^4.1.10"
pytest-cov = "^4.0.0"
pylint = "^2.17.4"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
